src/main/default/objects/MultiReport_Export_Item__c/MultiReport_Export_Item__c.object-meta.xml
<CustomObject>
    <description>Object to Map Report to the exported xlsx sheet</description>
    <label>MultiReport Export Item</label>
    <nameField>
        <displayFormat>MR-Export-Item-{00000}</displayFormat>
        <label>MultiReport Export Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MultiReport Export Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>