src/main/default/objects/MultiReport_Export_Item__c/fields/Header_Override_Count__c.field-meta.xml
<CustomField>
    <fullName>Header_Override_Count__c</fullName>
    <label>Header Override Count</label>
    <summaryForeignKey>MultiReport_Export_Header_Override__c.MultiReport_Export_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>