src/main/default/objects/MultiReport_Export_Item__c/fields/MultiReport_Export_Template__c.field-meta.xml
<CustomField>
    <fullName>MultiReport_Export_Template__c</fullName>
    <label>MultiReport Export Template</label>
    <referenceTo>MultiReport_Export_Template__c</referenceTo>
    <relationshipLabel>MultiReport Export Items</relationshipLabel>
    <relationshipName>MultiReport_Export_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>