src/main/default/objects/MultiReport_Export_Item__c/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <description>The Id of the Report used to create a sheet in the .xlsx export</description>
    <inlineHelpText>The Id of the Report used to create a sheet in the .xlsx export</inlineHelpText>
    <label>Report Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>