src/main/default/objects/MultiReport_Export_Item__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <description>The Name of the Report used to create a sheet in the .xlsx export</description>
    <inlineHelpText>The Id of the Report used to create a sheet in the .xlsx export</inlineHelpText>
    <label>Report Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>