src/main/default/objects/MultiReport_Export_Item__c/fields/Sheet_Name__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Name__c</fullName>
    <description>The Name you would like for the sheet in the .xlsx export file ( the name of the tab at the bottom in Excel )</description>
    <inlineHelpText>The Name you would like for the sheet in the .xlsx export file ( the name of the tab at the bottom in Excel )</inlineHelpText>
    <label>Sheet Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>